Removed the dependency of Windows while evaluating.